--- a/src/Resources/styles/front/common/layout/header/cart.less
+++ b/src/Resources/styles/front/common/layout/header/cart.less
@@ -1,6 +1,6 @@
 @cart-icon-size: 27px;
 @cart-icon-gap: 17px;
-@cart-number-size: 14px;
+@cart-number-size: 17px;
 
 .cart {
     display: none;
@@ -50,9 +50,10 @@
             text-align: center;
 
             color: @color-f;
-            font-size: 11px;
+            font-size: @font-size-extra-small;
+            font-weight: 300;
             border-radius: 20px;
-            background-color: @color-primary;
+            background-color: @color-red;
         }
     }
 }
