--- a/src/Resources/styles/front/common/layout/layout.less
+++ b/src/Resources/styles/front/common/layout/layout.less
@@ -65,15 +65,15 @@ img {
         }
 
         &--border-radius-top {
-            border-radius: @radius @radius 0 0;
+            border-radius: @radius-big @radius-big 0 0;
         }
 
         &--border-radius-bottom {
-            border-radius: 0 0 @radius @radius;
+            border-radius: 0 0 @radius-big @radius-big;
         }
 
         &--border-radius {
-            border-radius: @radius;
+            border-radius: @radius-big;
         }
 
         &--top-line {
