--- a/src/Resources/styles/front/common/layout/header.less
+++ b/src/Resources/styles/front/common/layout/header.less
@@ -4,13 +4,13 @@
 @header-mobile-button-info-size: 16px;
 @header-mobile-button-dropdown-position: @web-header-mobile-dropdown-position;
 @header-search-icon-size: 18px;
-@header-item-gap: 34px;
+@header-item-gap: 16px;
 @header-item-gap-small: 10px;
-@header-logo-width: 250px;
+@header-logo-width: 232px;
 @header-logo-width-small: 169px;
-@header-search-width: 490px;
+@header-search-width: 426px;
 @header-search-width-small: 400px;
-@header-right-actions-width: 344px;
+@header-right-actions-width: 354px;
 
 .header {
     position: relative;
@@ -18,10 +18,10 @@
     flex-wrap: wrap;
     align-items: center;
     min-height: @header-height;
-    padding: 12px 0 0;
+    padding-top: 12px;
 
     @media @query-vl {
-        padding: 12px 0 20px;
+        padding-top: 30px;
     }
 
     &--small {
@@ -52,12 +52,8 @@
 
 // Left part of header with logo
 .header__logo {
-    width: 100%;
     text-align: left;
-
-    @media @query-vl {
-        flex: 1;
-    }
+    width: @header-logo-width;
 
     .header--small & {
         width: @header-logo-width-small;
@@ -79,8 +75,8 @@
     margin-bottom: 20px;
 
     @media @query-vl {
-        width: auto;
-        justify-content: flex-end;
+        width: calc(~"100% - @{header-logo-width}");
+        justify-content: space-between;
         margin: 0;
     }
 
@@ -106,8 +102,8 @@
         &__item {
             margin-left: @header-item-gap-small;
 
-            @media @query-lg {
-                margin-left: @header-item-gap - 18px;
+            @media @query-vl {
+                margin-left: @header-item-gap;
             }
         }
     }
@@ -116,11 +112,15 @@
         margin-left: @header-item-gap-small;
         
         @media @query-lg {
-            margin-left: @header-item-gap;
             width: @header-search-width-small;
         }
 
+        @media @query-vl {
+            margin-left: @header-item-gap;
+        }
+
         @media @query-xl {
+            margin-left: 74px;
             width: @header-search-width;
         }
 
