design: add style for contact, menu and add new icons

--- a/src/Resources/styles/front/common/components/box/dropdown.less
+++ b/src/Resources/styles/front/common/components/box/dropdown.less
@@ -71,6 +71,7 @@
             margin-left: -10px;
 
             font-size: @box-dropdown-user-size;
+            opacity: 0.5;
         }
 
         &__text {
