--- a/src/Resources/styles/front/common/layout/header.less
+++ b/src/Resources/styles/front/common/layout/header.less
@@ -40,10 +40,10 @@
     @media @query-vl {
         display: flex;
         flex-direction: row;
+        justify-content: space-between;
         align-items: center;
         width: 100%;
         margin-top: 10px;
-        padding: 0 15px;
 
         background-color: @color-base;
         border-radius: @radius;
