--- a/src/Resources/styles/front/common/components/list/menu.less
+++ b/src/Resources/styles/front/common/components/list/menu.less
@@ -1,5 +1,5 @@
 @list-menu-padding-right: 25px;
-@list-menu-arrow-size: 25px;
+@list-menu-arrow-size: 10px;
 @list-menu-columns-count: 3;
 @list-menu-columns-gap: 8px;
 @list-menu-item-height: 36px;
@@ -120,6 +120,18 @@
                 padding: 0 15px;
             }
 
+            &__arrow {
+                height: @list-menu-arrow-size;
+                margin-left: 5px;
+                opacity: 0.5;
+
+                font-size: @list-menu-arrow-size;
+
+                .open & {
+                    transform: rotate(180deg);
+                }
+            }
+
             &--with-dropdown {
                 &:hover {
                     text-decoration: none;
@@ -130,6 +142,7 @@
                 color: @color-f;
                 font-size: 16px;
                 font-weight: 700;
+                text-transform: uppercase;
 
                 &:hover {
                     color: @color-f;
